RESOLVED FIXED67111
[GTK][WK2] Compilation error in WebKit2 GTK - Revision 93953
https://bugs.webkit.org/show_bug.cgi?id=67111
Summary [GTK][WK2] Compilation error in WebKit2 GTK - Revision 93953
Ravi Phaneendra Kasibhatla
Reported 2011-08-29 00:09:30 PDT
WebKit2 GTK build is failing with below error on Revision: 93953 ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::cancelledError(const WebCore::ResourceRequest&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:40:60: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:40:60: error: new declaration ‘void WebKit::cancelledError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:37:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::cancelledError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:43:77: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::blockedError(const WebCore::ResourceRequest&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:46:58: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:46:58: error: new declaration ‘void WebKit::blockedError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:38:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::blockedError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:49:97: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::cannotShowURLError(const WebCore::ResourceRequest&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:52:64: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:52:64: error: new declaration ‘void WebKit::cannotShowURLError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:39:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::cannotShowURLError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:55:74: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::interruptedForPolicyChangeError(const WebCore::ResourceRequest&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:58:77: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:58:77: error: new declaration ‘void WebKit::interruptedForPolicyChangeError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:40:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::interruptedForPolicyChangeError(const WebCore::ResourceRequest&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:61:81: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::cannotShowMIMETypeError(const WebCore::ResourceResponse&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:64:71: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:64:71: error: new declaration ‘void WebKit::cannotShowMIMETypeError(const WebCore::ResourceResponse&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:41:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::cannotShowMIMETypeError(const WebCore::ResourceResponse&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:67:108: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::fileDoesNotExistError(const WebCore::ResourceResponse&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:70:69: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:70:69: error: new declaration ‘void WebKit::fileDoesNotExistError(const WebCore::ResourceResponse&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:42:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::fileDoesNotExistError(const WebCore::ResourceResponse&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:73:75: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp: In function ‘WebCore::ResourceError WebKit::pluginWillHandleLoadError(const WebCore::ResourceResponse&)’: ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:76:73: error: return type ‘struct WebCore::ResourceError’ is incomplete ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:76:73: error: new declaration ‘void WebKit::pluginWillHandleLoadError(const WebCore::ResourceResponse&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:43:24: error: ambiguates old declaration ‘WebCore::ResourceError WebKit::pluginWillHandleLoadError(const WebCore::ResourceResponse&)’ ../../Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:79:79: error: invalid use of incomplete type ‘struct WebCore::ResourceError’ ../../Source/WebKit2/WebProcess/WebCoreSupport/WebErrors.h:30:11: error: forward declaration of ‘struct WebCore::ResourceError’
Attachments
Compilation error fix (1.22 KB, patch)
2011-08-29 00:19 PDT, Ravi Phaneendra Kasibhatla
no flags
Ravi Phaneendra Kasibhatla
Comment 1 2011-08-29 00:19:42 PDT
Created attachment 105468 [details] Compilation error fix GTK WK2 compilation fix
WebKit Review Bot
Comment 2 2011-08-29 01:22:21 PDT
Comment on attachment 105468 [details] Compilation error fix Clearing flags on attachment: 105468 Committed r93960: <http://trac.webkit.org/changeset/93960>
WebKit Review Bot
Comment 3 2011-08-29 01:22:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.