[GTK][WK2] Compilation error in WebKit2 GTK - Revision 93953 https://bugs.webkit.org/show_bug.cgi?id=67111

Patch by Vamshikrishna Yellenki <vamshi@motorola.com> on 2011-08-29
Reviewed by Martin Robinson.

WebKit2 GTK build error.

* WebProcess/WebCoreSupport/gtk/WebErrorsGtk.cpp:
Include <WebCore/ResourceError.h> explicitly to remove WebCore::ResourceError
inclusion error.

Canonical link: https://commits.webkit.org/82902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93960 268f45cc-cd09-0410-ab3c-d52691b4dbfc